AIC finder optimizations